--- a/src/app/(profile)/components/desktop/MyResponses/AnnouncementsList.module.scss
+++ b/src/app/(profile)/components/desktop/MyResponses/AnnouncementsList.module.scss
@@ -28,9 +28,9 @@
   background-color: #1aa683;
 }
 
-.responsesList {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+.announcementsList {
+  display: flex;
+  flex-wrap: wrap;
   gap: 24px;
 }
 
@@ -42,15 +42,17 @@
   font-size: 16px;
 }
 
-/* Card styles */
 .card {
+  border: 1px solid #ebebeb;
   background-color: white;
+  width: 287px;
+  height: auto;
   border-radius: 10px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
   overflow: hidden;
   display: flex;
   flex-direction: column;
   position: relative;
+  padding: 20px 16px 30px;
 }
 
 .imageContainer {
@@ -59,6 +61,7 @@
 }
 
 .imageWrapper {
+  border-radius: 5px;
   position: relative;
   height: 130px;
   overflow: hidden;
@@ -97,43 +100,52 @@
 }
 
 .content {
-  padding: 16px;
+  padding-top: 16px;
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
 
+
 .title {
-  font-size: 18px;
-  font-weight: 600;
+  font-size: 20px;
+  font-weight: 700;
   margin: 0;
   color: #252525;
 }
-
 .location {
   display: flex;
   align-items: center;
   gap: 5px;
+  font-weight: 400;
   font-size: 14px;
   color: #6b7280;
 }
-
+.location svg {
+  width: 15px;
+}
 .details {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
+  display: flex;
+  justify-content: space-around;
 }
 
 .detailItem {
   display: flex;
   align-items: center;
+  flex-direction: column;
   gap: 5px;
   font-size: 14px;
   color: #252525;
 }
+.detailItem span {
+  font-size: 10px;
+  font-weight: 400;
+  color: #252525;
+  opacity: 0.5;
+}
 
 .price {
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 700;
   color: #252525;
   margin: 0;
@@ -150,20 +162,8 @@
   margin-top: 10px;
 }
 
-.cancelButton,
-.leaveButton {
-  flex: 1;
-  border: 1px solid #ef4444;
-  background-color: white;
-  color: #ef4444;
-  height: 40px;
-  border-radius: 5px;
-  font-weight: 500;
-  font-size: 14px;
-}
 
-.cancelButton:hover,
-.leaveButton:hover {
+.cancelButton:hover {
   background-color: #fee2e2;
   color: #ef4444;
   border-color: #ef4444;
@@ -186,14 +186,14 @@
 }
 
 .detailsButton:hover {
-  background-color: #1a1a1a;
-  color: white;
+  background-color: #1a1a1a !important;
+  color: white !important;
 }
 
 .detailsButton:disabled {
-  background-color: #e5e7eb;
-  color: #9ca3af;
-  cursor: not-allowed;
+  background-color: #e5e7eb !important;
+  color: #9ca3af !important;
+  cursor: not-allowed !important;
 }
 
 @media (max-width: 768px) {
@@ -201,7 +201,7 @@
     padding: 16px;
   }
 
-  .responsesList {
+  .announcementsList {
     grid-template-columns: 1fr;
     gap: 16px;
   }
