done redux userslice and redux toolkit auth endpoints, al auth requests fixed, and add notification middleware

--- a/src/app/(auth)/login/Login.module.scss
+++ b/src/app/(auth)/login/Login.module.scss
@@ -1,5 +1,5 @@
 // src/app/(auth)/login/Login.module.scss
-@import "../_auth-styles.scss";
+@import "../auth-styles";
 
 .container {
   @include auth-container;
