--- a/src/app/(profile)/components/desktop/MyAnnouncements/GroupsDetails/GroupsDetails.scss
+++ b/src/app/(profile)/components/desktop/MyAnnouncements/GroupsDetails/GroupsDetails.scss
@@ -1,6 +1,7 @@
 .ant-collapse-header{
   padding: 0px 0px !important;
-  margin-bottom: 20px;
+  margin: 20px 0;
+  align-items: center;
 }
 
 .ant-collapse-content-box{
@@ -21,4 +22,7 @@
 }
 .ant-table-row-expand-icon:focus, .ant-table-row-expand-icon:hover {
   color: #1aa683 !important;
+}
+.ant-collapse-expand-icon{
+  margin: 0 0 0 20px;
 }
