--- a/src/app/not-found.module.scss
+++ b/src/app/not-found.module.scss
@@ -1,11 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Nunito+Sans");
-
-:root {
-  --blue: #252525;
-  --white: #fff;
-  --green: #1aa683;
-}
-
 .loadingScreen {
   display: flex;
   align-items: center;
@@ -27,7 +19,7 @@
   margin: 0 auto;
   svg {
     width: 100%;
-    visibility: hidden; // GSAP will set this to visible
+    visibility: hidden;
   }
 }
 
@@ -38,21 +30,20 @@
   h1 {
     font-size: 5.5em;
     font-weight: bold;
-    color: var(--green);
+    color: #1aa683;
   }
   h2 {
     font-weight: bold;
   }
   p {
     font-size: 1em;
-    color: var(--blue);
+    color: #252525;
     margin: 10px 0 30px;
   }
 }
 
-/* Button */
 .btn {
-  background: var(--green);
+  background: #1aa683;
   max-width: 180px;
   color: #fff;
   font-weight: bold;
