--- a/src/app/(profile)/components/desktop/MyAnnouncements/GroupsDetails/GroupsDetails.scss
+++ b/src/app/(profile)/components/desktop/MyAnnouncements/GroupsDetails/GroupsDetails.scss
@@ -1,28 +1,29 @@
-.ant-collapse-header{
+.ant-collapse-header {
   padding: 0px 0px !important;
   margin: 20px 0;
   align-items: center;
 }
 
-.ant-collapse-content-box{
+.ant-collapse-content-box {
   padding: 0 !important;
 }
 .ant-table-expanded-row-fixed {
   padding: 0 !important;
 }
-.ant-table-body{
+.ant-table-body {
   max-height: none !important;
   overflow: auto !important;
 }
-.ant-table-tbody{
+.ant-table-tbody {
   padding: 8px !important;
 }
-.ant-btn-icon svg{
+.ant-btn-icon svg {
   vertical-align: -0.35em !important;
 }
-.ant-table-row-expand-icon:focus, .ant-table-row-expand-icon:hover {
+.ant-table-row-expand-icon:focus,
+.ant-table-row-expand-icon:hover {
   color: #1aa683 !important;
 }
-.ant-collapse-expand-icon{
+.ant-collapse-expand-icon {
   margin: 0 0 0 20px;
 }
