--- a/src/app/apartments/Apartments.module.scss
+++ b/src/app/apartments/Apartments.module.scss
@@ -11,13 +11,30 @@
 }
 
 .loadingScreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.7);
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 300px;
+  z-index: 1000;
+  backdrop-filter: blur(1px);
+}
+
+.empty {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
 }
 
 .rightColumn {
+  position: relative;
   flex: 1;
   display: flex;
   flex-direction: column;
