--- a/src/app/(profile)/components/desktop/MyResponses/GroupDetails/GroupDetails.module.scss
+++ b/src/app/(profile)/components/desktop/MyResponses/GroupDetails/GroupDetails.module.scss
@@ -595,3 +595,54 @@
 :global(.ant-collapse-header-text) {
   width: 100%;
 }
+.residentGroupBorder {
+  border: 5px solid #6b7280 !important;
+}
+
+.residentsStatus {
+  color: #6b7280;
+  background-color: #f3f4f6;
+}
+
+.groupBadge {
+  font-size: 12px;
+  background-color: #e9f2f0;
+  color: #1aa683;
+  padding: 2px 8px;
+  border-radius: 4px;
+}
+
+.groupApplicantsContainer {
+  padding: 0;
+  padding-top: 15px;
+  background-color: #f9fafb;
+  border-radius: 10px;
+  margin: 0;
+}
+
+.groupApplicantsTitle {
+  font-size: 16px;
+  font-weight: 500;
+  color: #252525;
+  margin: 0 0 10px 15px;
+}
+
+.nestedTable {
+  margin-top: 10px;
+}
+
+.leaveGroupButton {
+  background-color: #ef4444 !important;
+  border: none;
+  color: white !important;
+  height: 36px;
+  border-radius: 5px;
+  font-weight: 500;
+  font-size: 14px;
+  box-shadow: none;
+}
+
+.leaveGroupButton:hover {
+  background-color: #dc2626 !important;
+  color: white !important;
+}
