--- a/src/app/(profile)/components/mobile/Profile/ProfileForm.module.scss
+++ b/src/app/(profile)/components/mobile/Profile/ProfileForm.module.scss
@@ -1,3 +1,188 @@
+// Shared styles
+.loadingContainer {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.customSpin {
+  color: #1AA683 !important;
+  font-size: 24px !important;
+}
+
+.customSpin :global(.ant-spin-dot-item) {
+  background-color: #1AA683 !important;
+}
+
+.phoneInput {
+  width: 100%;
+  height: 54px !important;
+}
+
+// Desktop styles
+.container {
+  background-color: #fff;
+  border: 1px solid #ebebeb;
+  padding: 24px;
+  border-radius: 10px;
+  width: 100%;
+  height: 750px !important;
+}
+
+.wrapper {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+.wrapperInner {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.formRow {
+  display: flex;
+  gap: 20px;
+}
+
+.formItem {
+  width: 440px !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  color: #25252580 !important;
+  line-height: 18px !important;
+  margin: 0 !important;
+}
+
+.formInput {
+  border-radius: 10px !important;
+  border: 1px solid #ebebeb !important;
+  padding: 15px 16px !important;
+}
+
+.formSelect {
+  height: 54px !important;
+}
+
+.btnRow {
+  margin-top: 24px;
+  display: flex;
+  gap: 12px;
+  justify-content: flex-end;
+}
+
+.editBtn {
+  border-radius: 5px;
+  background-color: #32343a;
+  height: 45px;
+  border: none;
+  font-weight: 700;
+  font-size: 14px;
+  color: #fff;
+  width: 175px;
+}
+
+.editBtn:hover {
+  background-color: #35373e !important;
+  color: #fff !important;
+}
+
+.saveBtn {
+  border-radius: 5px;
+  background-color: #1aa683 !important;
+  height: 45px;
+  border: none;
+  font-weight: 700;
+  font-size: 14px;
+  color: #fff !important;
+  width: 175px;
+}
+
+.saveBtn:hover {
+  color: #fff !important;
+}
+
+.editPassword {
+  border-radius: 5px !important;
+  background-color: transparent !important;
+  color: #252525 !important;
+  border: 1px solid #252525 !important;
+  height: 45px;
+  font-weight: 700;
+  font-size: 14px;
+  width: 175px;
+}
+
+.modalPassword {
+  border-radius: 10px !important;
+  padding: 30px !important;
+  width: 600px !important;
+}
+
+.modalBodyPassword {
+  gap: 0 !important;
+  padding: 0 !important;
+}
+
+.modalTitle {
+  font-weight: 600 !important;
+  margin-bottom: 30px !important;
+  color: #32343a !important;
+}
+
+.passwordField {
+  position: relative;
+  margin-bottom: 16px;
+}
+
+.passwordToggleIcon {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 12px;
+  cursor: pointer;
+  color: #999;
+  font-size: 18px;
+}
+
+.inputStyle {
+  font-weight: 400 !important;
+  font-size: 16px !important;
+  border: 1px solid #ebebeb !important;
+  border-radius: 10px !important;
+  background-color: transparent !important;
+  background: transparent !important;
+}
+
+.modalFooter {
+  display: block;
+  padding: 0;
+}
+
+.confirmPassword {
+  display: block;
+  width: 100%;
+  height: 60px;
+  color: #fff;
+  font-size: 18px !important;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.cancelPassword {
+  display: block;
+  width: 100%;
+  height: 60px;
+  color: #252525;
+  font-size: 18px !important;
+  font-weight: 700;
+}
+
+// Mobile styles
 .mobileContainer {
   background-color: #fff;
   border: 1px solid #ebebeb;
@@ -72,6 +257,11 @@
   border: none;
 }
 
+.mobileEditBtn:hover {
+  background-color: #35373e !important;
+  color: #fff !important;
+}
+
 .mobileSaveBtn {
   width: 100%;
   height: 45px;
@@ -81,4 +271,19 @@
   background-color: #1aa683 !important;
   color: #fff !important;
   border: none;
+}
+
+.mobileSaveBtn:hover {
+  color: #fff !important;
+}
+
+.mobilePasswordBtn {
+  width: 100%;
+  height: 45px;
+  border-radius: 5px;
+  font-weight: 700;
+  font-size: 14px;
+  background-color: transparent;
+  color: #252525;
+  border: 1px solid #252525;
 }
